Ch 16 Fearless Concur : rev 4 Arc and Mutex

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -149,6 +149,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hi number 5 from the spawned thread\n",
+      "Hi number 6 from the spawned thread\n",
+      "Hi number 7 from the spawned thread\n",
+      "Hi number 8 from the spawned thread\n",
+      "Hi number 9 from the spawned thread\n",
       "hi number 1 from the main thread!\n",
       "Hi number 1 from the spawned thread\n",
       "hi number 2 from the main thread!\n",
@@ -156,8 +161,7 @@
       "hi number 3 from the main thread!\n",
       "Hi number 3 from the spawned thread\n",
       "hi number 4 from the main thread!\n",
-      "Hi number 4 from the spawned thread\n",
-      "Hi number 5 from the spawned thread\n"
+      "Hi number 4 from the spawned thread\n"
      ]
     },
     {
@@ -166,7 +170,7 @@
        "()"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,10 +202,13 @@
     "> Listing 16-1: Creating a new thread to print one thing while the main thread  \n",
     "prints something else\n",
     "\n",
-    "Note that when the main thread of a Rust program completes, all spawned threads  \n",
-    "are shut down, whether or not they have finished running. The output from this  \n",
-    "program might be a little different every time, but it will look similar to the  \n",
-    "following:\n",
+    "Note that when :  \n",
+    "\n",
+    "- the main thread of a Rust program completes,  \n",
+    "- all spawned threads are shut down, whether or not they have finished running.  \n",
+    "\n",
+    "The output from this program might be a little different every time, but it will  \n",
+    "look similar to the following:\n",
     "\n",
     "```rust\n",
     "hi number 1 from the main thread!\n",
@@ -214,14 +221,17 @@
     "hi number 4 from the spawned thread!\n",
     "hi number 5 from the spawned thread!\n",
     "```\n",
+    "#### -- Thread::Spawn() disrupted by Main Exit --\n",
     "\n",
     "The calls to `thread::sleep` force a thread to stop its execution for a short  \n",
     "duration, allowing a different thread to run. The threads will probably take  \n",
     "turns, but that isn’t guaranteed: it depends on how your operating system  \n",
     "schedules the threads. In this run, the main thread printed first, even though  \n",
     "the print statement from the spawned thread appears first in the code. And even  \n",
-    "though we told the spawned thread to print until i is 9, it only got to 5 before  \n",
-    "the main thread shut down.\n",
+    "though we :\n",
+    "\n",
+    "- told the spawned thread to print until i is 9,  \n",
+    "- it only got to 5 before the main thread shut down.\n",
     "\n",
     "If you run this code and only see output from the main thread, or don’t see any  \n",
     "overlap, try increasing the numbers in the ranges to create more opportunities  \n",
@@ -240,11 +250,15 @@
     "get to run at all!\n",
     "\n",
     "We can fix the problem of the spawned thread not running or ending prematurely  \n",
-    "by saving the return value of thread::spawn in a variable. The return type of  \n",
-    "thread::spawn is JoinHandle. A JoinHandle is an owned value that, when we call  \n",
-    "the join method on it, will wait for its thread to finish. Listing 16-2 shows  \n",
-    "how to use the JoinHandle of the thread we created in Listing 16-1 and call  \n",
-    "join to make sure the spawned thread finishes before main exits:\n",
+    "by saving the return value of `thread::spawn` in a variable. The return type of  \n",
+    "`thread::spawn` is `JoinHandle`. A `JoinHandle` is an owned value that :  \n",
+    "\n",
+    "- when we call the `join` method on it,  \n",
+    "- will wait for its thread to finish.  \n",
+    "\n",
+    "Listing 16-2 shows how to use the JoinHandle of the thread we created in  \n",
+    "Listing 16-1 and call join to make sure the spawned thread finishes before  \n",
+    "main exits:\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -318,11 +332,19 @@
     "> Listing 16-2: Saving a JoinHandle from thread::spawn to guarantee the thread  \n",
     "is run to completion\n",
     "\n",
-    "Calling join on the handle blocks the thread currently running until the thread  \n",
-    "represented by the handle terminates. Blocking a thread means that thread is  \n",
-    "prevented from performing work or exiting. Because we’ve put the call to join  \n",
-    "after the main thread’s for loop, running Listing 16-2 should produce output \n",
-    "similar to this:\n",
+    "#### -- `handle.join()` blocks Main until `handle` thread done --\n",
+    "\n",
+    "Calling `join` on the `handle` :  \n",
+    "- blocks the thread currently running  \n",
+    "- until the thread represented by the handle terminates.  \n",
+    "\n",
+    "Blocking a thread means that thread is prevented from performing work or  \n",
+    "exiting. Because we’ve :  \n",
+    "\n",
+    "- put the call to `join`  \n",
+    "- after the main thread’s for loop,  \n",
+    "\n",
+    "running Listing 16-2 should produce output similar to this:\n",
     "\n",
     "```rust\n",
     "hi number 1 from the main thread!\n",
@@ -341,10 +363,10 @@
     "```\n",
     "\n",
     "The two threads continue alternating, but the main thread waits because of the  \n",
-    "call to handle.join() and does not end until the spawned thread is finished.\n",
+    "call to `handle.join()` and does not end until the spawned thread is finished.\n",
     "\n",
-    "But let’s see what happens when we instead move handle.join() before the for  \n",
-    "loop in main, like this:\n",
+    "But let’s see what happens when we instead :  \n",
+    "- move `handle.join()` before the for loop in main, like this:\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -1837,6 +1859,138 @@
     "The code in Listing 16-15 will finally compile and run:\n",
     "\n",
     "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result : 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::sync::{Arc, Mutex};\n",
+    "use std::thread;\n",
+    "\n",
+    "{\n",
+    "    let counter = Arc::new(Mutex::new(0));\n",
+    "    // vec![] is a macro that creates a new vector and can hold values where :\n",
+    "    // - ANY type that implements the Copy or Clone trait\n",
+    "    // - but can NOT mix types, for mix types use enum or trait objects\n",
+    "    // @audit-ok : we are defining an empty vector hear ... but will flow in  \n",
+    "    // JoinHandles later in the code ... does that mean we can :\n",
+    "    // - define an empty vector container\n",
+    "    // and then if else populate with uniform but different types depending on  \n",
+    "    // branch flow?\n",
+    "    // ANSWER : Yes it is possible to define a single type that is stored in a  \n",
+    "    // vector and then use branching to populate the vector with different  \n",
+    "    // values of that single type\n",
+    "    let mut handles = vec![];\n",
+    "\n",
+    "    // 1..10  - is a range that is inclusive of 1 and exclusive of 10\n",
+    "    // 1..=10 - is a range that is inclusive of 1 and inclusive of 10\n",
+    "    for _ in 1..=10 {\n",
+    "        let counter = Arc::clone(&counter);\n",
+    "        let handle = thread::spawn( move || {\n",
+    "            let mut num = counter.lock().unwrap();\n",
+    "            *num += 1;\n",
+    "        });\n",
+    "        handles.push(handle);\n",
+    "    }\n",
+    "\n",
+    "    for handle in handles {\n",
+    "        // @note : we are WAITING for each thread to finish before continueing\n",
+    "        // to the next println!() statement in this closure\n",
+    "        // - this is a BLOCKING operation\n",
+    "        // - advisable to use Result<T, E> returned by join() to handle errors\n",
+    "        // else risk a thread to block INDEFINITELY\n",
+    "        handle.join().unwrap();\n",
+    "    }\n",
+    "\n",
+    "    println!(\"Result : {}\", *counter.lock().unwrap());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 16-15: Using an Arc<T> to wrap the Mutex<T> to be able to share  \n",
+    "ownership across multiple threads\n",
+    "\n",
+    "This code will print the following:\n",
+    "\n",
+    "```sh\n",
+    "Result: 10\n",
+    "```\n",
+    "\n",
+    "We did it! We counted from 0 to 10, which may not seem very impressive, but it  \n",
+    "did teach us a lot about Mutex<T> and thread safety. You could also use this  \n",
+    "program’s structure to do more complicated operations than just incrementing a  \n",
+    "counter. Using this strategy, you can :  \n",
+    "\n",
+    "- divide a calculation into independent parts,  \n",
+    "- split those parts across threads, and  \n",
+    "- then use a Mutex<T> to have each thread update the final result with its part.  \n",
+    "\n",
+    "> Note that if you are doing simple numerical operations, there are types simpler  \n",
+    "than Mutex<T> types provided by the std::sync::atomic module of the standard  \n",
+    "library. These types provide safe, concurrent, atomic access to primitive types.  \n",
+    "We chose to use Mutex<T> with a primitive type for this example so we could  \n",
+    "concentrate on how Mutex<T> works."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Similarities Between `RefCell<T>/Rc<T>` and `Mutex<T>Arc<T>`\n",
+    "\n",
+    "You might have noticed that counter is immutable but we could get a mutable  \n",
+    "reference to the value inside it; this means :  \n",
+    "\n",
+    "- Mutex<T> provides interior mutability, as the Cell family does.  \n",
+    "\n",
+    "In the same way we used RefCell<T> in Chapter 15 to allow us to mutate contents  \n",
+    "inside an Rc<T>, we use Mutex<T> to mutate contents inside an Arc<T>.\n",
+    "\n",
+    "Another detail to note is that Rust can’t protect you from all kinds of logic  \n",
+    "errors when you use Mutex<T>. Recall in Chapter 15 that using Rc<T> came with  \n",
+    "the risk of creating reference cycles, where two Rc<T> values refer to each  \n",
+    "other, causing memory leaks. Similarly, Mutex<T> comes with the risk of  \n",
+    "creating :  \n",
+    "\n",
+    "-**`deadlocks`**  \n",
+    "\n",
+    "These occur when an operation needs to lock two resources and two threads have  \n",
+    "each acquired one of the locks, causing them to wait for each other forever. If  \n",
+    "you’re interested in deadlocks, try creating a Rust program that has a deadlock;  \n",
+    "then research deadlock mitigation strategies for mutexes in any language and  \n",
+    "have a go at implementing them in Rust. The standard library API documentation  \n",
+    "for Mutex<T> and MutexGuard offers useful information.\n",
+    "\n",
+    "We’ll round out this chapter by talking about the Send and Sync traits and how  \n",
+    "we can use them with custom types."
    ]
   }
  ],
