Ch 16 Fearless Concur : rev 5 Complete

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_16_fearless_concurrency.ipynb
@@ -70,6 +70,8 @@
     "a variety of tools for modeling problems in whatever way is appropriate for your  \n",
     "situation and requirements.\n",
     "\n",
+    "#### -- Tools : Threads, Channels, Shared State, Sync, Send --\n",
+    "\n",
     "> Here are the topics we’ll cover in this chapter:\n",
     "\n",
     "- How to create threads to run multiple pieces of code at the same time\n",
@@ -139,11 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -221,7 +219,7 @@
     "hi number 4 from the spawned thread!\n",
     "hi number 5 from the spawned thread!\n",
     "```\n",
-    "#### -- Thread::Spawn() disrupted by Main Exit --\n",
+    "#### -- thread::Spawn() disrupted by Main Exit --\n",
     "\n",
     "The calls to `thread::sleep` force a thread to stop its execution for a short  \n",
     "duration, allowing a different thread to run. The threads will probably take  \n",
@@ -266,11 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -374,11 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -435,6 +425,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### -- spawned then main when handle.join() before main loop --\n",
+    "\n",
     "The main thread will wait for the spawned thread to finish and then run its for  \n",
     "loop, so the output won’t be interleaved anymore, as shown here:\n",
     "\n",
@@ -487,11 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -570,6 +558,8 @@
     "error: could not compile `threads` due to previous error\n",
     "```\n",
     "\n",
+    "#### -- thread `borrow` error : thread closure may outlive `borrow` --\n",
+    "\n",
     "Rust infers how to capture `v`, and because `println!` only needs a reference  \n",
     "to `v`, the closure tries to `borrow v`. However, there’s a problem:  \n",
     "\n",
@@ -585,11 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -661,6 +647,8 @@
     "> Listing 16-4: A thread with a closure that attempts to capture a reference to  \n",
     "v from a main thread that drops `v`\n",
     "\n",
+    "#### -- thread backgrounded : borrow values fall of scope --\n",
+    "\n",
     "If Rust allowed us to run this code, there’s a possibility the spawned thread  \n",
     "would be immediately put in the background without running at all :  \n",
     "\n",
@@ -687,6 +675,8 @@
     "  |                                ++++\n",
     "```\n",
     "\n",
+    "#### -- `move` lets thread closure take `ownership` of value --\n",
+    "\n",
     "By adding the `move` keyword before the closure, we force the closure to :  \n",
     "- take ownership of the values it’s using  \n",
     "- rather than allowing Rust to infer that it should borrow the values.  \n",
@@ -700,11 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -746,12 +732,19 @@
     "> Listing 16-5: Using the move keyword to force a closure to take ownership of  \n",
     "the values it uses\n",
     "\n",
+    "#### -- `move` is subject to borrow and ownership check --\n",
+    "\n",
     "We might be tempted to try the same thing to fix the code in Listing 16-4 where  \n",
-    "the main thread called drop by using a move closure. However, this fix will not  \n",
-    "work because what Listing 16-4 is trying to do is disallowed for a different  \n",
-    "reason. If we added move to the closure, we would move v into the closure’s  \n",
-    "environment, and we could no longer call drop on it in the main thread. We would  \n",
-    "get this compiler error instead:\n",
+    "the main thread called drop by using a `move` closure. However, this fix will  \n",
+    "not work because what Listing 16-4 is trying to do is disallowed for a different  \n",
+    "reason. \n",
+    "\n",
+    "If we added `move` to the closure :  \n",
+    "\n",
+    "- we would move `v` into the closure’s environment, and  \n",
+    "- we could no longer call `drop` on it in the main thread.  \n",
+    "\n",
+    "We would get this compiler error instead:\n",
     "\n",
     "```sh\n",
     "$ cargo run\n",
@@ -779,6 +772,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- `move` overrides `borrow` default, but can't violate `borrow` rule --\n",
+    "\n",
     "Rust’s ownership rules have saved us again! We got an error from the code in  \n",
     "Listing 16-3 because Rust was being conservative and only borrowing v for the  \n",
     "thread, which meant the main thread could theoretically invalidate the spawned  \n",
@@ -848,11 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -915,11 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -995,11 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1097,11 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1194,11 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1301,11 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1494,11 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1592,11 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1707,11 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1864,11 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1992,6 +1947,127 @@
     "We’ll round out this chapter by talking about the Send and Sync traits and how  \n",
     "we can use them with custom types."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extensible Concurrency with the Sync and Send Traits\n",
+    "---\n",
+    "\n",
+    "Interestingly, the Rust language has very few concurrency features. Almost every  \n",
+    "concurrency feature we’ve talked about so far in this chapter has been part of  \n",
+    "the standard library, not the language. Your options for handling concurrency  \n",
+    "are not limited to the language or the standard library; you can write your own  \n",
+    "concurrency features or use those written by others.\n",
+    "\n",
+    "However, two concurrency concepts are embedded in the language: the  \n",
+    "`std::marker` traits :  \n",
+    "\n",
+    "- **`Sync`** \n",
+    "- **`Send`**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Allowing Transference of Ownership Between Threads with `Send`\n",
+    "\n",
+    "The Send marker trait indicates that ownership of values of the type  \n",
+    "implementing Send can be transferred between threads. Almost every Rust type  \n",
+    "is Send, but there are some exceptions, including Rc<T>: this cannot be Send  \n",
+    "because :  \n",
+    "\n",
+    "- if you cloned an Rc<T> value \n",
+    "- and tried to transfer ownership of the clone to another thread,  \n",
+    "- both threads might update the reference count at the same time.  \n",
+    "\n",
+    "For this reason, Rc<T> is implemented for use in single-threaded situations  \n",
+    "where you don’t want to pay the thread-safe performance penalty.\n",
+    "\n",
+    "Therefore, Rust’s type system and trait bounds ensure that you can never  \n",
+    "accidentally send an Rc<T> value across threads unsafely. When we tried to do  \n",
+    "this in Listing 16-14, we got the error the trait Send is not implemented for  \n",
+    "Rc<Mutex<i32>>. When we switched to Arc<T>, which is Send, the code compiled.\n",
+    "\n",
+    "Any type composed entirely of Send types is automatically marked as Send as  \n",
+    "well. Almost all primitive types are Send, aside from raw pointers, which  \n",
+    "we’ll discuss in Chapter 19."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Allowing Access from Multiple Threads with `Sync`\n",
+    "\n",
+    "The Sync marker trait indicates that it is safe for the type implementing  \n",
+    "Sync to be referenced from multiple threads. In other words, any type T is  \n",
+    "Sync if &T (an immutable reference to T) is Send, meaning the reference can be  \n",
+    "sent safely to another thread. Similar to Send, primitive types are Sync, and  \n",
+    "types composed entirely of types that are Sync are also Sync.\n",
+    "\n",
+    "The smart pointer Rc<T> is also not Sync for the same reasons that it’s not  \n",
+    "Send. The RefCell<T> type (which we talked about in Chapter 15) and the family  \n",
+    "of related Cell<T> types are not Sync. The implementation of borrow checking  \n",
+    "that RefCell<T> does at runtime is not thread-safe. The smart pointer Mutex<T>  \n",
+    "is Sync and can be used to share access with multiple threads as you saw in the  \n",
+    "“Sharing a Mutex<T> Between Multiple Threads” section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing `Send` and `Sync` Manually is `Unsafe`\n",
+    "\n",
+    "Because types that are made up of Send and Sync traits are automatically also  \n",
+    "Send and Sync, we don’t have to implement those traits manually. As marker  \n",
+    "traits, they don’t even have any methods to implement. They’re just useful for  \n",
+    "enforcing invariants related to concurrency.\n",
+    "\n",
+    "Manually implementing these traits involves implementing unsafe Rust code. We’ll  \n",
+    "talk about using unsafe Rust code in Chapter 19; for now, the important  \n",
+    "information is that building new concurrent types not made up of Send and Sync  \n",
+    "parts requires careful thought to uphold the safety guarantees.  \n",
+    "\n",
+    "“The Rustonomicon” has more information about these guarantees and how to uphold  \n",
+    "them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "This isn’t the last you’ll see of concurrency in this book: the project in  \n",
+    "Chapter 20 will use the concepts in this chapter in a more realistic situation  \n",
+    "than the smaller examples discussed here.\n",
+    "\n",
+    "As mentioned earlier, because very little of how Rust handles concurrency is  \n",
+    "part of the language, many concurrency solutions are implemented as crates.  \n",
+    "These evolve more quickly than the standard library, so be sure to search online  \n",
+    "for the current, state-of-the-art crates to use in multithreaded situations.\n",
+    "\n",
+    "The Rust standard library provides channels for message passing and smart  \n",
+    "pointer types, such as Mutex<T> and Arc<T>, that are safe to use in concurrent  \n",
+    "contexts. The type system and the borrow checker ensure that the code using  \n",
+    "these solutions won’t end up with data races or invalid references.  \n",
+    "\n",
+    "> Once you get your code to compile, you can rest assured that it will happily  \n",
+    "run on multiple threads without the kinds of hard-to-track-down bugs common in  \n",
+    "other languages.  \n",
+    "\n",
+    "Concurrent programming is no longer a concept to be afraid of: go forth and  \n",
+    "make your programs concurrent, fearlessly!\n",
+    "\n",
+    "Next, we’ll talk about idiomatic ways to model problems and structure solutions  \n",
+    "as your Rust programs get bigger. In addition, we’ll discuss how Rust’s idioms  \n",
+    "relate to those you might be familiar with from object-oriented programming."
+   ]
   }
  ],
  "metadata": {
@@ -2004,7 +2080,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
