Ch 17 OOP - gui with Traits

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -331,6 +331,338 @@
     "But because Rust doesn’t have inheritance, we need another way to structure the  \n",
     "gui library to allow users to extend it with new types."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining a Trait for Common Behaviour\n",
+    "\n",
+    "To implement the behavior we want gui to have, we’ll define a trait named Draw  \n",
+    "that will have one method named draw. Then we can define a vector that takes a  \n",
+    "trait object. A trait object points to both an instance of a type implementing  \n",
+    "our specified trait and a table used to look up trait methods on that type at  \n",
+    "runtime. We create a trait object by specifying some sort of pointer, such as  \n",
+    "a & reference or a Box<T> smart pointer, then the dyn keyword, and then  \n",
+    "specifying the relevant trait. (We’ll talk about the reason trait objects must  \n",
+    "use a pointer in Chapter 19 in the section  \n",
+    "“Dynamically Sized Types and the Sized Trait.”)  \n",
+    "\n",
+    "We can use trait objects in place of a generic or concrete type. Wherever we  \n",
+    "use a trait object, Rust’s type system will ensure at compile time that any  \n",
+    "value used in that context will implement the trait object’s trait.  \n",
+    "Consequently, we don’t need to know all the possible types at compile time.\n",
+    "\n",
+    "We’ve mentioned that, in Rust, we refrain from calling structs and enums  \n",
+    "“objects” to distinguish them from other languages’ objects. In a struct or  \n",
+    "enum, the data in the struct fields and the behavior in impl blocks are  \n",
+    "separated, whereas in other languages, the data and behavior combined into one  \n",
+    "concept is often labeled an object. \n",
+    "\n",
+    "However, trait objects are more like objects in other languages in the sense  \n",
+    "that they : \n",
+    "\n",
+    "- combine data and behavior.  \n",
+    "\n",
+    "But trait objects differ from traditional objects in that :  \n",
+    "\n",
+    "- we can’t add data to a trait object.  \n",
+    "\n",
+    "Trait objects aren’t as generally useful as objects in other languages:  \n",
+    "\n",
+    "- their specific purpose is to allow abstraction across common behavior.\n",
+    "\n",
+    "Listing 17-3 shows how to define a trait named Draw with one method named draw:\n",
+    "\n",
+    "Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// This line is defining a public trait named Draw. A trait in Rust is like an  \n",
+    "// interface in other languages. It defines a set of methods (functions) that a  \n",
+    "// type must have in order to implement this trait. The keyword pub makes this  \n",
+    "// trait public, meaning it can be used by other modules and crates.\n",
+    "pub trait Draw {\n",
+    "    // &self is a reference to the instance of the type that this method will be  \n",
+    "    // called on.\n",
+    "    // (;) at the end of a function or method declaration in a trait has a  \n",
+    "    // specific meaning : \n",
+    "    // - \"There will be a method called draw that takes a &self parameter, but  \n",
+    "    // I'm not going to tell you what it does right now\"\n",
+    "    // - The method is being declared as part of the trait's interface, but no  \n",
+    "    // code block is provided to define what the method actually does\n",
+    "    // - Declaration ONLY, implementation TBD\n",
+    "    fn draw(&self);\n",
+    "    // draw is a trait definition : a promise that any type implementing this  \n",
+    "    // trait will have a draw method that can be called on its instances\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 17-3: Definition of the Draw trait\n",
+    "\n",
+    "This syntax should look familiar from our discussions on how to define traits in  \n",
+    "Chapter 10. Next comes some new syntax: Listing 17-4 defines a struct named  \n",
+    "Screen that holds a vector named components. This vector is of type  \n",
+    "Box<dyn Draw>, which is a trait object; it’s a stand-in for any type inside a  \n",
+    "Box that implements the Draw trait.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub struct Screen {\n",
+    "    // this declaration allows us to populate our screen with any Type that\n",
+    "    // implements the Draw trait : Button, TextField, etc.\n",
+    "    // Vec<Box<dyn Draw>> makes this possible because :\n",
+    "    // - Vec<T> is a growable list type provided by Rust's standard library\n",
+    "    // - Box<T> is a smart pointer that allocates data on the heap. It's used  \n",
+    "    // here to hold the data for any type that implements the Draw trait.\n",
+    "    // - dyn Draw is a trait object that represents any type that implements the  \n",
+    "    // Draw trait. The dyn keyword is short for \"dynamic\", and it indicates that  \n",
+    "    // this is dynamic dispatch - the exact method to call when Draw's methods  \n",
+    "    // are invoked will be determined at runtime based on the actual type of  \n",
+    "    // the data in the box.\n",
+    "    pub components: Vec<Box<dyn Draw>>,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 17-4: Definition of the Screen struct with a components field holding a  \n",
+    "vector of trait objects that implement the Draw trait\n",
+    "\n",
+    "On the Screen struct, we’ll define a method named run that will call the draw  \n",
+    "method on each of its components, as shown in Listing 17-5:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// @note : can't run this cell 2 because of : \n",
+    "// - [E0592] Error: duplicate definitions\n",
+    "// if REPL iterating, put it in a closure\n",
+    "/// Runs the screen by drawing each of the components.\n",
+    "/// Each component is drawn in the order in which they appear in the  \n",
+    "/// `components` vector.\n",
+    "impl Screen {\n",
+    "    pub fn run(&self) {\n",
+    "        // Iterating over the components using .iter() is efficient as it : \n",
+    "        // - BORROWS each item in the collection, rather than taking OWNERSHIP\n",
+    "        for component in self.components.iter() {\n",
+    "            // Here's where the benefit of the Draw trait comes into play: even  \n",
+    "            // though each component might be a different type, they all  \n",
+    "            // implement the Draw trait, so they all have a draw method\n",
+    "            // - we can dynamically dispatch the draw method of each component\n",
+    "            component.draw();\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 17-5: A run method on Screen that calls the draw method on each  \n",
+    "component\n",
+    "\n",
+    "This works differently from defining a struct that uses a generic type parameter  \n",
+    "with trait bounds. A generic type parameter can :  \n",
+    "- only be substituted with one concrete type at a time, \n",
+    "- whereas trait objects allow for multiple concrete types to fill in for the  \n",
+    "trait object at runtime.  \n",
+    "\n",
+    "For example, we could have defined the Screen struct using a generic type and a  \n",
+    "trait bound as in Listing 17-6:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{ // @note : enclosing this in a closure to avoid duplicate in Jupyter cell\n",
+    "\n",
+    "// Alternative implementation of Screen using generics\n",
+    "// - Difference is that this RESTRICTS the Screen instance to hold only one type\n",
+    "// of component .i.e. Button, TextField, etc.\n",
+    "// - This is suitable for HOMOGENOUS collections\n",
+    "pub struct Screen<T: Draw> {\n",
+    "    pub components: Vec<T>,\n",
+    "}\n",
+    "\n",
+    "impl<T> Screen<T>\n",
+    "where \n",
+    "    T: Draw, \n",
+    "{\n",
+    "    pub fn run(&self) {\n",
+    "        for component in self.components.iter() {\n",
+    "            component.draw();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "} // end Jupyter cell closure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 17-6: An alternate implementation of the Screen struct and its run  \n",
+    "method using generics and trait bounds\n",
+    "\n",
+    "This restricts us to a Screen instance that has a list of components all of  \n",
+    "type Button or all of type TextField. If you’ll only ever have homogeneous  \n",
+    "collections, using generics and trait bounds is preferable because the  \n",
+    "definitions will be monomorphized at compile time to use the concrete types.\n",
+    "\n",
+    "On the other hand, with the method using trait objects, one Screen instance can  \n",
+    "hold a Vec<T> that contains a `Box<Button>` as well as a `Box<TextField>`.  \n",
+    "Let’s look at how this works, and then we’ll talk about the runtime performance  \n",
+    "implications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing the Trait\n",
+    "\n",
+    "Now we’ll add some types that implement the Draw trait. We’ll provide the Button  \n",
+    "type. Again, actually implementing a GUI library is beyond the scope of this  \n",
+    "book, so the draw method won’t have any useful implementation in its body. To  \n",
+    "imagine what the implementation might look like, a Button struct might have  \n",
+    "fields for width, height, and label, as shown in Listing 17-7:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub struct Button {\n",
+    "    pub width: u32,\n",
+    "    pub height: u32,\n",
+    "    pub label: String,\n",
+    "}\n",
+    "\n",
+    "impl Draw for Button {\n",
+    "    fn draw(&self) {\n",
+    "        // code to actually draw a button\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 17-7: A Button struct that implements the Draw trait\n",
+    "\n",
+    "The width, height, and label fields on Button will differ from the fields on  \n",
+    "other components; for example, a TextField type might have those same fields  \n",
+    "plus a placeholder field. Each of the types we want to draw on the screen will  \n",
+    "implement the Draw trait but will use different code in the draw method to  \n",
+    "define how to draw that particular type, as Button has here  \n",
+    "(without the actual GUI code, as mentioned).  \n",
+    "\n",
+    "The Button type, for instance, might have an additional impl block containing  \n",
+    "methods related to what happens when a user clicks the button. These kinds of  \n",
+    "methods won’t apply to types like TextField.\n",
+    "\n",
+    "If someone using our library decides to implement a SelectBox struct that has  \n",
+    "width, height, and options fields, they implement the Draw trait on the  \n",
+    "SelectBox type as well, as shown in Listing 17-8:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//use gui::Draw;\n",
+    "\n",
+    "struct SelectBox {\n",
+    "\n",
+    "}\n",
+    "\n",
+    "impl Draw for SelectBox {\n",
+    "    fn draw(&self) {\n",
+    "        // code to actually draw a select box\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 17-8: Another crate using gui and implementing the Draw trait on a  \n",
+    "SelectBox struct\n",
+    "\n",
+    "Our library’s user can now write their main function to create a Screen  \n",
+    "instance. To the Screen instance, they can add a SelectBox and a Button by  \n",
+    "putting each in a Box<T> to become a trait object. They can then call the run  \n",
+    "method on the Screen instance, which will call draw on each of the components.  \n",
+    "Listing 17-9 shows this implementation:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
   }
  ],
  "metadata": {
